--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3.6'
 
 services:
   llama-gpt-api-7b:
-    # image: ghcr.io/getumbrel/llama-gpt-api
     build:
       context: ./api
       dockerfile: Dockerfile
@@ -11,7 +10,9 @@ services:
       MODEL: '/models/llama-2-7b-chat.bin'
 
   llama-gpt-ui:
-    image: 'ghcr.io/getumbrel/llama-gpt-ui:latest'
+    build:
+      context: ./ui # Change this to the correct path for your Next.js app
+      dockerfile: Dockerfile # Ensure you have a Dockerfile in the UI directory
     ports:
       - 3000:3000
     restart: on-failure
