--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
     "@tabler/icons-react": "^2.9.0",
+    "@xenova/transformers": "^2.5.2",
     "chromadb": "^1.5.6",
     "eventsource-parser": "^0.1.0",
     "i18next": "^22.4.13",
