--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,26 @@
-version: '3.6'
+version: '3.9'
+
+networks:
+  net:
+    driver: bridge
 
 services:
+  chroma-server:
+    image: server
+    build:
+      context: ../chroma
+      dockerfile: Dockerfile
+    volumes:
+      - ../chroma:/chroma
+      - index_data:/index_data
+    command: uvicorn chromadb.app:app --reload --workers 1 --host 0.0.0.0 --port 8000 --log-config log_config.yml
+    environment:
+      - IS_PERSISTENT=TRUE
+    ports:
+      - 8000:8000
+    networks:
+      - net
+
   llama-gpt-api-7b:
     build:
       context: ./api
@@ -8,11 +28,13 @@ services:
     restart: on-failure
     environment:
       MODEL: '/models/llama-2-7b-chat.bin'
+    networks:
+      - net
 
   llama-gpt-ui:
     build:
-      context: ./ui # Change this to the correct path for your Next.js app
-      dockerfile: Dockerfile # Ensure you have a Dockerfile in the UI directory
+      context: ./ui 
+      dockerfile: Dockerfile 
     ports:
       - 3000:3000
     restart: on-failure
@@ -22,3 +44,11 @@ services:
       - 'DEFAULT_MODEL=/models/llama-2-7b-chat.bin'
       - 'WAIT_HOSTS=llama-gpt-api-7b:8000'
       - 'WAIT_TIMEOUT=600'
+    networks:
+      - net
+
+volumes:
+  index_data:
+    driver: local
+  backups:
+    driver: local
