--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "chromadb": "^1.5.6",
     "eventsource-parser": "^0.1.0",
     "i18next": "^22.4.13",
+    "langchain": "^0.0.131",
     "next": "13.2.4",
     "next-i18next": "^13.2.2",
     "openai": "^3.2.1",
