--- a/ui/package.json
+++ b/ui/package.json
@@ -17,11 +17,13 @@
     "@xenova/transformers": "^2.5.2",
     "chromadb": "^1.5.6",
     "eventsource-parser": "^0.1.0",
+    "formidable": "^3.5.0",
     "i18next": "^22.4.13",
     "langchain": "^0.0.131",
     "next": "13.2.4",
     "next-i18next": "^13.2.2",
     "openai": "^3.2.1",
+    "pdf-parse": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
@@ -38,6 +40,7 @@
     "@mozilla/readability": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/formidable": "^3.4.1",
     "@types/jsdom": "^21.1.1",
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
