--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "langchain": "^0.0.131",
     "next": "13.2.4",
     "next-i18next": "^13.2.2",
+    "node-fetch": "^3.3.2",
     "openai": "^3.2.1",
     "pdf-parse": "^1.1.1",
     "react": "18.2.0",
