--- a/docker-compose-70b.yml
+++ b/docker-compose-70b.yml
@@ -1,19 +1,25 @@
 version: '3.9'
 
+networks:
+  net:
+    driver: bridge
+
 services:
   chroma-server:
-      image: server
-      build:
-        context: ../chroma
-        dockerfile: Dockerfile
-      volumes:
-        - ../chroma:/chroma
-        - index_data:/index_data
-      command: uvicorn chromadb.app:app --reload --workers 1 --host 0.0.0.0 --port 8000 --log-config log_config.yml
-      environment:
-        - IS_PERSISTENT=TRUE
-      ports:
-        - 8000:8000
+    image: server
+    build:
+      context: ../chroma
+      dockerfile: Dockerfile
+    volumes:
+      - ../chroma:/chroma
+      - index_data:/index_data
+    command: uvicorn chromadb.app:app --reload --workers 1 --host 0.0.0.0 --port 8000 --log-config log_config.yml
+    environment:
+      - IS_PERSISTENT=TRUE
+    ports:
+      - 8000:8000
+    networks:
+      - net
 
   llama-gpt-api-70b:
     build:
@@ -31,6 +37,8 @@ services:
       USE_MLOCK: 1
     cap_add:
       - IPC_LOCK
+    networks:
+      - net
 
   llama-gpt-ui:
     build:
