--- a/docker-compose-13b.yml
+++ b/docker-compose-13b.yml
@@ -21,7 +21,7 @@ services:
     networks:
       - net
 
-  llama-gpt-api-13b:
+  isaac-gpt-api-13b:
     build:
       context: ./api
       dockerfile: 13B.Dockerfile
@@ -34,7 +34,7 @@ services:
     networks:
       - net
 
-  llama-gpt-ui:
+  isaac-gpt-ui:
     build:
       context: ./ui 
       dockerfile: Dockerfile 
@@ -43,9 +43,9 @@ services:
     restart: on-failure
     environment:
       - 'OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXX'
-      - 'OPENAI_API_HOST=http://llama-gpt-api-13b:8000'
+      - 'OPENAI_API_HOST=http://isaac-gpt-api-13b:8000'
       - 'DEFAULT_MODEL=/models/llama-2-13b-chat.bin'
-      - 'WAIT_HOSTS=llama-gpt-api-13b:8000'
+      - 'WAIT_HOSTS=isaac-gpt-api-13b:8000'
       - 'WAIT_TIMEOUT=600'
     networks:
       - net
