--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     networks:
       - net
 
-  llama-gpt-api-7b:
+  isaac-gpt-api-7b:
     build:
       context: ./api
       dockerfile: Dockerfile
@@ -31,7 +31,7 @@ services:
     networks:
       - net
 
-  llama-gpt-ui:
+  isaac-gpt-ui:
     build:
       context: ./ui 
       dockerfile: Dockerfile 
@@ -40,9 +40,9 @@ services:
     restart: on-failure
     environment:
       - 'OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXX'
-      - 'OPENAI_API_HOST=http://llama-gpt-api-7b:8000'
+      - 'OPENAI_API_HOST=http://isaac-gpt-api-7b:8000'
       - 'DEFAULT_MODEL=/models/llama-2-7b-chat.bin'
-      - 'WAIT_HOSTS=llama-gpt-api-7b:8000'
+      - 'WAIT_HOSTS=isaac-gpt-api-7b:8000'
       - 'WAIT_TIMEOUT=600'
     networks:
       - net
