--- a/docker-compose-70b.yml
+++ b/docker-compose-70b.yml
@@ -22,12 +22,14 @@ services:
       - net
 
   isaac-gpt-api-70b:
-    build:
-      context: ./api
-      dockerfile: 70B.Dockerfile
+    image: ghcr.io/abetlen/llama-cpp-python:latest
     restart: on-failure
+    volumes:
+      - './models:/models'
+      - './api:/api'
     environment:
       MODEL: '/models/llama-2-70b-chat.bin'
+      MODEL_DOWNLOAD_URL: 'https://huggingface.co/TheBloke/Llama-2-70B-Chat-GGML/resolve/main/llama-2-70b-chat.ggmlv3.q4_0.bin'
       # Llama 2 70B's grouping factor is 8 compared to 7B and 13B's 1. Currently,
       # it's not possible to change this using --n_gqa with llama-cpp-python in
       # run.sh, so we expose it as an environment variable.
@@ -37,6 +39,7 @@ services:
       USE_MLOCK: 1
     cap_add:
       - IPC_LOCK
+    command: '/bin/sh /api/run.sh'
     networks:
       - net
 
