--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,12 +22,16 @@ services:
       - net
 
   isaac-gpt-api-7b:
-    build:
-      context: ./api
-      dockerfile: Dockerfile
+
+    image: ghcr.io/abetlen/llama-cpp-python:latest
     restart: on-failure
+    volumes:
+      - './models:/models'
+      - './api:/api'
     environment:
       MODEL: '/models/llama-2-7b-chat.bin'
+      MODEL_DOWNLOAD_URL: 'https://huggingface.co/TheBloke/Nous-Hermes-Llama-2-7B-GGML/resolve/main/nous-hermes-llama-2-7b.ggmlv3.q4_0.bin'
+    command: '/bin/sh /api/run.sh'
     networks:
       - net
 
