--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     networks:
       - net
 
-  isaac-gpt-api-7b:
+  isaac-gpt-api:
     # Pin the image to llama-cpp-python 0.1.78 to avoid ggml => gguf breaking changes
     image: ghcr.io/abetlen/llama-cpp-python:latest@sha256:b6d21ff8c4d9baad65e1fa741a0f8c898d68735fff3f3cd777e3f0c6a1839dd4
     restart: on-failure
