--- a/ui/package.json
+++ b/ui/package.json
@@ -43,6 +43,7 @@
     "@mozilla/readability": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/common-tags": "^1.8.1",
     "@types/formidable": "^3.4.1",
     "@types/jsdom": "^21.1.1",
     "@types/node": "18.15.0",
