--- a/docker-compose-gguf.yml
+++ b/docker-compose-gguf.yml
@@ -21,7 +21,7 @@ services:
     networks:
       - net
 
-  isaac-gpt-api:
+  aimengpt-api:
     # Pin to llama-cpp-python 0.1.80 with GGUF support
     image: ghcr.io/abetlen/llama-cpp-python:latest@sha256:de0fd227f348b5e43d4b5b7300f1344e712c14132914d1332182e9ecfde502b2
     restart: on-failure
@@ -41,7 +41,7 @@ services:
     networks:
       - net
 
-  isaac-gpt-ui:
+  aimengpt-ui:
     build:
       context: ./ui 
       dockerfile: Dockerfile 
@@ -50,9 +50,9 @@ services:
     restart: on-failure
     environment:
       - 'OPENAI_API_KEY=sk-XXXXXXXXXXXXXXXXXXXX'
-      - 'OPENAI_API_HOST=http://isaac-gpt-api:8000'
+      - 'OPENAI_API_HOST=http://aimengpt-api:8000'
       - 'DEFAULT_MODEL=/models/${MODEL_NAME:-llama-2-7b-chat.bin}'
-      - 'WAIT_HOSTS=isaac-gpt-api:8000'
+      - 'WAIT_HOSTS=aimengpt-api:8000'
       - 'WAIT_TIMEOUT=${WAIT_TIMEOUT:-3600}'
     networks:
       - net
