--- a/ui/package.json
+++ b/ui/package.json
@@ -13,9 +13,13 @@
   },
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^1.2.2",
     "@tabler/icons-react": "^2.9.0",
     "@xenova/transformers": "^2.5.2",
     "chromadb": "^1.5.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "common-tags": "^1.8.2",
     "eventsource-parser": "^0.1.0",
     "formidable": "^3.5.0",
@@ -36,6 +40,8 @@
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.0",
     "zustand": "^4.4.1"
   },
