--- a/ui/components.json
+++ b/ui/components.json
@@ -5,7 +5,7 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "styles/global.css",
+    "css": "styles/globals.css",
     "baseColor": "zinc",
     "cssVariables": true
   },
