--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
     "formidable": "^3.5.0",
     "i18next": "^22.4.13",
     "langchain": "^0.0.131",
+    "lucide-react": "^0.272.0",
     "next": "13.2.4",
     "next-i18next": "^13.2.2",
     "node-fetch": "^3.3.2",
