--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@dqbd/tiktoken": "^1.0.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@tabler/icons-react": "^2.9.0",
     "@xenova/transformers": "^2.5.2",
     "chromadb": "^1.5.6",
